# co2

./: LICENSE  README.md  co2.ino
.github/workflows/: ci.yml  ds18b20.yml  hello.yml  release.yml
bot/: .gitignore  Dockerfile  README.md  co2plot-sample.json  install.sh  installer.sh  monibot  monibot-sample.conf  monibotd.service  monibotzd.service  outpkl.py  pyproject.toml  setup.cfg
bot/src/co2/: co2plot.py  dateparser.py
bot/src/monibot/: ameoffice.py  book.py  command.py  cron.py  getip.py  jma.py  monibot.py  monibotz.py  monitor.py  openweathermap.py  ping.py
bot/tests/monibot/: monitor-test.conf  test_book.py  test_cron.py  test_jma.py  test_monibotz.py  test_monitor.py  test_openweathermap.py  test_openweathermap_response_mock.txt  test_ping.py
bot/tests/monibot/jma/: 20241027103000.json  260000.json  390000.json  amedastable.json
bot/tests/plot/: test_2_topic.db  test_co2plot.py  test_config1.json  test_config1_expected.pkl  test_config2.json  test_config3.json  test_config4.json  test_config4_expected.pkl  test_config5.json  test_config5_expected.pkl  test_config5_paris.json  test_config5_paris_expected.pkl  test_config5_without_tz.json  test_config5_without_tz_expected.pkl  test_date_parser.py  test_long.db  test_png_hash.json
logger/: Cargo.toml  README.md  co2db.json-example  co2db.service  installer.sh
logger/services/: mqtt2rest.service  rest2co2db.service
logger/src/: lib.rs  main.rs
logger/tests/: test_config.json  test_config_mqtt_client.json-example  test_config_with_unknown_key.json  test_config_without_defaults.json  test_config_without_requirements.json  test_dbrot.bats  test_dbrot.json  test_orig.db  test_xconfig.json
m5stack/scd30/: .gitignore  README.md  co2.ino
plot/: README.md  co2plot.py  monibot.py  outpkl.py  requirement.txt
plot/tests/: test_co2plot.py  test_config1.json  test_config2.json  test_config3.json  test_config4.json  test_config5.json
raspberry-pi/ds18b20/: Cargo.toml  Makefile  README.md  ds18b20.json-example  ds18b20_pub.service  installer.sh
raspberry-pi/ds18b20/src/: ds18b20.rs  lib.rs  main.rs
sensor/: co2.ino  config.json
