[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "monibot"
authors = [{ name="kumanofoo", email="kumanofoo@gmail.com" }]
version = "0.0.0"
description = "slack co2 command"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 3",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "slack_bolt",
  "slack_sdk",
  "zulip",
  "matplotlib",
  "requests_html",
  "lxml_html_clean",
  "numpy",
  "pandas",
  "python-dateutil",
  "pytz",
  "dnspython",
  "astral",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "freezegun",
]

[project.scripts]
monibot = "monibot.monibot:main"
monibotz = "monibot.monibotz:main"
co2plot = "co2.co2plot:main"

[project.urls]
Homepage = "https://github/kumanofoo/co2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "monibot.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
