[metadata]
name = monibot
version = attr: monibot.__version__
url = https://github/kumanofoo/co2
author = kumanofoo
author_email = kumanofoo@gmail.com
description = slack co2 command 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
  Development Status :: 3
  Environment :: Console
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  
[options]
zip_safe = False
packages = find:
package_dir =
  =src
install_requires =
  slack_bolt
  slack_sdk
  matplotlib
  requests_html
  numpy
  pandas
  python-dateutil
  pytz

[options.packages.find]
where = src

[options.extras_require]
dev =
  pytest
  pytest-mock
  freezegun

[options.entry_points]
console_scripts =
  monibot = monibot.monibot:main
  co2plot = co2.co2plot:main

[tool:pytest]
testpaths = tests
