[package]
name = "ds18b20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ds18b20"
path = "src/main.rs"

[dependencies]
paho-mqtt = "0.11"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "*", features = ["vendored"] }
